--- a/SparkHacksWebsite.html
+++ b/SparkHacksWebsite.html
@@ -8,9 +8,11 @@
 
     <h1>Welcome to our website to track your crop like needs</h1>
 
-    <p>
+    <p> 
         Please log in
     </p>
+
+    <a href="LoginPage.html" class = "button-class"> Log in here </a>
     <!--
         Add a link to another page to the user name and login
 
@@ -23,7 +25,7 @@ First, a log in page with a username and password
 if all those are correct (Use may key stuff from C++ idk)
 then we got ot heir page
 
-On that page, we have a list of different buttons
+On that page (check choosecrop file), we have a list of different buttons
 based on the kinds of crops the have
 Clicking on those buttons will result in showing
 data for that crop, like soil water levels idk
